# dependency-metrics

./: .gitignore  LICENSE  README.md  pyproject.toml  version.py
.github/workflows/: pypi.yml  tests.yml
dependency_metrics/: constants.py  datadog_utils.py  metrics.py  parsing_utils.py
dependency_metrics/package_managers/: pip.py  utils.py  yarn.py
package_metrics/: constants.py  datadog_utils.py  exceptions.py  metrics.py  outdated_dependency_metrics.py  parsing_utils.py  yarn_list.py
package_metrics/package_managers/: README.md  pip.py  utils.py  yarn.py
tests/: test_datadog_utils.py  test_metrics.py  test_parsing_utils.py  test_pip.py
tests/package_managers/: test_pip.py  test_utils.py  test_yarn.py
