[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "dependency-metrics"
version = "0.1.0"
readme = "README.md"
description = "Python tool to track outdated dependencies."
authors = [
    {name = "Dimagi", email = "dev@dimagi.com"},
]
maintainers = [
    {name = "Dimagi", email = "dev@dimagi.com"}
]
license = {file = "LICENSE"}
dependencies = [
    'requests',
    'sh>=2.0.0',
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.scripts]
metrics = "dependency_metrics.metrics:main"

[project.optional-dependencies]
test = [
    'freezegun',
    'nose2',
]

[project.urls]
repository = "https://github.com/dimagi/dependency-metrics"
